--- a/svoyak_net.ipynb
+++ b/svoyak_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "svoyak-net.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+V3j2YDOHFurxmd6GI8KM",
+      "authorship_tag": "ABX9TyO2tmGG9zaE9pbEhxOKZ6ND",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,18 +24,30 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/imannost/svoyak-net/blob/main/svoyak_net.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/imannost/svoyak-net/blob/anya/svoyak_net.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Hf5dszbvUP-8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hf5dszbvUP-8",
+        "outputId": "e3426c3e-f8b2-44ab-a73d-ab094221c5a5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"hello\")"
       ]
     }
   ]
